--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cash Register</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
         <label for="bill-amount">Bill amount</label><br>
         <input type="text" placeholder="Enter the cash giver"><br>
         <label for="cash-given">Cash Amount</label><br>
-        <button>Check</button>
+        <button> Check</button>
         <h2>Return Change</h2>
         <table>
             <tr>
@@ -40,5 +41,6 @@
             </tr>
         </table>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
