--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <div class="container">
         <h1>Cash Register Manager</h1>
         <p>Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
-        <input type="text" placeholder="Enter the bill amount"><br>
+        <input id="bill-amount" type="text" placeholder="Enter the bill amount"><br>
         <label for="bill-amount">Bill amount</label><br>
-        <input type="text" placeholder="Enter the cash giver"><br>
+        <input id="cash" type="text" placeholder="Enter the cash giver"><br>
         <label for="cash-given">Cash Amount</label><br>
         <button> Check</button>
         <h2>Return Change</h2>
         <table>
             <tr>
                 <th>No of notes</th>
+                <td>0</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
@@ -37,6 +38,7 @@
                 <td>50</td>
                 <td>20</td>
                 <td>10</td>
+                <td>5</td>
                 <td>1</td>
             </tr>
         </table>
