processing logic done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label for="bill-amount">Bill amount</label><br>
         <input id="cash" type="text" placeholder="Enter the cash giver"><br>
         <label for="cash-given">Cash Amount</label><br>
-        <button> Check</button>
+        <button id="btn-chk"> Check</button>
         <h2>Return Change</h2>
         <table>
             <tr>
