--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <input id="cash" type="text" placeholder="Enter the cash giver"><br>
         <label for="cash-given">Cash Amount</label><br>
         <button id="btn-chk"> Check</button>
+        <p id="error-message"></p>
         <h2>Return Change</h2>
         <table>
-            <tr>
+            <tr id="output">
                 <th>No of notes</th>
                 <td>0</td>
                 <td>0</td>
