--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
         <p id="error-message"></p>
         <h2>Return Change</h2>
         <table>
-            <tr id="output">
+            <tr >
                 <th>No of notes</th>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+               <td class="notesnumber">0</td>
+               <td class="notesnumber">0</td>
+               <td class="notesnumber">0</td>
+               <td class="notesnumber">0</td>
+               <td class="notesnumber">0</td>
+               <td class="notesnumber">0</td>
+               <td class="notesnumber">0</td>
+               <td class="notesnumber">0</td>
+               <td class="notesnumber">0</td>
+                
             </tr>
             <tr>
                 <th>note</th>
