--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Cash Register Manager</h1>
+        <h1 class="title">Cash Register Manager</h1>
         <p>Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
         <input id="bill-amount" type="number" placeholder="Enter the bill amount"><br>
-        <label for="bill-amount">Bill amount</label><br>
+        <label for="bill-amount">Bill Amount</label><br>
         <button id="check-amount">Next</button>
         <p id="error-message1"></p>
         <div class="aftercheck">
