--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <input id="bill-amount" type="number" placeholder="Enter the bill amount"><br>
         <label for="bill-amount">Bill Amount</label><br>
         <button id="check-amount">Next</button>
-        <p id="error-message1"></p>
+        <p class="error" id="error-message1"></p>
         <div class="aftercheck">
             <input id="cash" type="number" placeholder="Enter the cash given"><br>
             <label for="cash-given">Cash Amount</label><br>
             <button id="btn-chk"> Check</button>
-            <p id="error-message2"></p>
+            <p class="error" id="error-message2"></p>
             <h2>Return Change</h2>
             <table>
                 <tr >
