--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         <input id="bill-amount" type="number" placeholder="Enter the Bill Amount"><br>
         <label for="bill-amount">Bill Amount</label><br>
         <button id="check-amount">Next</button>
-        <p class="error" id="error-message1"></p>
+        <!--<p class="error" id="error-message1"></p>-->
         <div class="aftercheck">
             <input id="cash" type="number" placeholder="Enter the Cash Given"><br>
             <label for="cash-given">Cash Amount</label><br>
             <button id="btn-chk"> Check</button>
-            <p class="error" id="error-message2"></p>
-
         </div>  
+        <p class="error" id="error-message"></p>
         <div class="table">
             <h2>Return Change</h2>
             <table>
